fix past events and csectionteasercard spacing

--- a/src/styles/default/_section-teaser-card.scss
+++ b/src/styles/default/_section-teaser-card.scss
@@ -1,12 +1,13 @@
 .section-teaser-card {
     position: relative;
-    max-width: $container-l-main + px;
-    margin: 0 auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    gap: var(--space-xl) 16px;
+    gap: var(--space-xl) 33px;
+
+    max-width: $container-l-main + px;
+    margin: 0 auto;
 
     .card {
         width: calc((100% - 32px) / 3);
